# AnonymizationEngine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
anonymizer/: __init__.py  api.py  batch.py  bridge.py  cli.py  evalharness.py  fpe.py  imageredact.py  models.py  policy.py  policyengine.py  runtime.py  secrets.py  worker.py
anonymizer/core/: __init__.py  canonicalize.py  checkdigits.py  dates.py  detection.py  engine.py  fpelayout.py  metrics.py  policyload.py  pseudonym.py  redline.py  spans.py  storage.py  strategies.py  types.py  vault.py  verification.py
config/: app.docker.yaml  app.example.yaml  masking_policy.yaml
config/regulations/: appi_japan.yaml  ccpa_deidentification.yaml  gdpr_pseudonymization.yaml  glba.yaml  hipaa_expert_determination.yaml  hipaa_safe_harbor.yaml  india_dpdp.yaml  lgpd_brazil.yaml  pci_dss.yaml  pdpa_singapore.yaml  pii_protection.yaml  pipeda_canada.yaml  pipl_china.yaml  popia_south_africa.yaml  privacy_act_australia.yaml  rag_default.yaml  training_default.yaml  uk_dpa_2018.yaml
docs/: DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  GUIDE_FOR_NEW_USERS.md
examples/: sample_message.json
examples/previews/: redline_rag.html  (+1 more)
migrations/: 001_init.sql
ops/: prometheus.yml
scripts/: run_tests.py
tests/: test_bridge.py  test_canonicalize.py  test_checkdigits.py  test_detection_scale.py  test_engine_modes.py  test_eval_and_misc.py  test_imageredact.py  test_parallel_consistency.py  test_policyengine.py  test_pseudonym.py  test_spans.py  test_vault_and_storage.py
