[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymizer"
version = "1.0.0"
description = "Dual-mode anonymization engine: irreversible training masking + consistent RAG pseudonymization"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "python-dateutil>=2.8",
    "cryptography>=42.0",
    "ff3>=1.0.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3"]
postgres = ["psycopg[binary]>=3.1"]
vault = ["hvac>=2.1"]
dev = ["pytest>=8.0", "hypothesis>=6.98", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
anonymizer = "anonymizer.cli:main"

[tool.setuptools.packages.find]
include = ["anonymizer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
